# wasmedge-mysql-binlog-kafka

./: .gitignore  Dockerfile  EKS.md  README.md  eks.wasmedge-cluster.yml  kubernetes.wasmedge-container.yml
.github/workflows/: rust.yml
kubernetes/: binlog.yml  eks-cluster.yml  insert.yml  mysql.yml
mio_wasi/: .gitignore  Cargo.toml  README.md
mio_wasi/examples/: tcp_server.rs
mio_wasi/src/: lib.rs  poll.rs
mio_wasi/src/net/tcp/: listener.rs  stream.rs
mio_wasi/src/sys/: mod.rs
mio_wasi/src/sys/wasi/: mod.rs  wasmedge.rs
mysql-binlog-kafka/: Cargo.toml
mysql-binlog-kafka/src/: main.rs
note/: Dockerfile.wasmedge  TestResult.md  eks-cluster.yml  kind-binlog.yml  kubernetes-binlog-cli-insert.yml  kubernetes-binlog-cli.yml  kubernetes-binlog.yml  wasmedge.yml
tokio_wasi/: Cargo.toml
tokio_wasi/.cargo/: config
tokio_wasi/examples/: Cargo.toml  chat.rs  echo.rs  hello_world.rs  print_each_packet.rs  tinydb.rs  tinyhttp.rs
tokio_wasi/tokio/: Cargo.toml  README.md  build.rs
tokio_wasi/tokio-stream/: Cargo.toml
tokio_wasi/tokio-util/: Cargo.toml  README.md
tokio_wasi/tokio/src/: lib.rs
tokio_wasi/tokio/src/net/: addr.rs  mod.rs
tokio_wasi/tokio/src/net/tcp/: listener.rs  socket.rs  stream.rs
