[package]
name = "tokio-stream_wasi"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "tokio-stream-0.1.x" git tag.
version = "0.1.11"
edition = "2018"
rust-version = "1.49"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Utilities to work with `Stream` and `tokio`.
"""
categories = ["asynchronous"]
[lib]
name = "tokio_stream"
path = "src/lib.rs"

[features]
default = ["time"]
time = ["tokio_wasi/time"]
net = ["tokio_wasi/net"]
io-util = ["tokio_wasi/io-util"]
fs = ["tokio_wasi/fs"]
sync = ["tokio_wasi/sync", "tokio-util_wasi"]
signal = ["tokio_wasi/signal"]

[dependencies]
futures-core = { version = "0.3.0" }
pin-project-lite = "0.2.0"
tokio_wasi = { path = "../tokio", version = "1", features = ["sync"] }
tokio-util_wasi = { path = "../tokio-util", version = "0.7", optional = true }

# [dev-dependencies]
# tokio = { version = "1.2.0", path = "../tokio", features = ["full", "test-util"] }
# async-stream = "0.3"
# parking_lot = "0.12.0"
# tokio-test = { path = "../tokio-test" }
# futures = { version = "0.3", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# Issue #3770
#
# This should allow `docsrs` to be read across projects, so that `tokio-stream`
# can pick up stubbed types exported by `tokio`.
rustc-args = ["--cfg", "docsrs"]
